--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-![Text Analyzer](TextAnalyzer/TextAnalyzer/Logo.png)
+![Text Analyzer](TextAnalyzer/Logo.png)
 
 
 # Text Analyzer Project / Afek Aharoni / afek.aharoni / 214143414
