--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-![Text Analyzer](TextAnalyzer/Logo.png)
+![Text Analyzer](https://github.com/AfekAharoni/TextAnalyzer/blob/main/TextAnalyzer/Logo.png?raw=true)
 
 
 # Text Analyzer Project / Afek Aharoni / afek.aharoni / 214143414
